tests/macros/duplicate/filter.stderr
error: duplicate option `filter`
 --> $DIR/filter.rs:4:9
  |
4 |         filter: todo!(),
  |         ^^^^^^
