tests/macros/duplicate/filter.rs
fn main() {
    let q = inquisition::questions![input {
        filter: todo!(),
        filter: todo!(),
    }];
}
